--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+	<title>La Panthère | Entreprise de web design à Lyon</title>
+    <meta name="description" content="Vous souhaitez optimiser votre site web pour Google? Confiez votre projet à notre agence de web design basée à Lyon spécialisée en SEO et création de site.">
+	<meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -19,7 +21,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+   
 
     
 <!-- Analytics -->
