--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="Default">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>Contact</title>
+    <title>page2</title>
 
     
 <!-- Analytics -->
@@ -46,7 +46,9 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+					</li>
+					<li>
+						<a href="page2.html">page2 &gt;</a>
 					</li>
 				</ul>
 			</div>
