--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-	<meta name="description" content="Vous souhaitez optimiser votre site web pour Google? Confiez votre projet à notre agence de web design basée à Lyon spécialisée en SEO et création de site.">
+	<meta name="description" content="Vous souhaitez discuter de la refonte de votre site? D’identité visuelle et de web design? Ou de SEO. Contactez l’agence La Panthère située en plein coeur Lyon.">
     <meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
