--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>Contact</title>
+    <title>La Panthère | Entreprise de web design à Lyon | Contactez-nous</title>
 
     
 <!-- Analytics -->
