Suppression des keywords dans meta keywords

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="">
 	<title>La Panthère | Entreprise de web design à Lyon</title>
     <meta name="description" content="Vous souhaitez optimiser votre site web pour Google? Confiez votre projet à notre agence de web design basée à Lyon spécialisée en SEO et création de site.">
 	<meta name="robots" content="index, follow">
