--- a/page2.html
+++ b/page2.html
@@ -47,9 +47,6 @@
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>
-					<li>
-						<a href="page2.html">Contact</a>
-					</li>
 				</ul>
 			</div>
 		</nav>
@@ -135,22 +132,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md black"></span></a>
+							<a class="social" href="https://twitter.com/?lang=fr" aria-label="Twitter"><span class="fa fa-twitter icon-md black"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md black"></span></a>
+							<a class="social" href="https://fr-fr.facebook.com/" aria-label="Facebook"><span class="fa fa-facebook icon-md black"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md black"></span></a>
+							<a class="social" href="https://dribbble.com/" aria-label="Dribbble"><span class="fa fa-dribbble icon-md black"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md black"></span></a>
+							<a class="social" href="https://www.instagram.com/?hl=fr" aria-label="Instagram"><span class="fa fa-instagram icon-md black"></span></a>
 						</div>
 					</div>
 				</div>
