--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence web design logo" height="40"></a>
+				<a class="navbar-brand" href="index.html"><img class="img-logo" src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence web design logo"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -61,7 +61,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="logo de l'Agence La Panthère">
+				<img src="img/logo.webp" class="center-block image-resize-mode" alt="logo de l'Agence La Panthère">
 				<h1 class="text-center hero-bloc-text tc-white ">
 					Agence La Panthère
 				</h1>
