--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img class="img-logo" src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence web design logo"></a>
+				<a class="navbar-brand" href="index.html"><img height="40" class="img-logo" src="img/agence-la-panthere-monochrome.svg" alt="La Panthère agence web design logo"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
