--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img width="360" height="400" loading="lazy" src="img/1_light.jpg" class="img-responsive portfolio-thumb" alt="image d'un projet de refonte d'un site web d'un journal local"></a>
+				<a href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img width="360" height="400" loading="lazy" src="img/1.webp" class="img-responsive portfolio-thumb" alt="image d'un projet de refonte d'un site web d'un journal local"></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
