--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img width="360" height="400" loading="lazy" src="img/2_light.webp" class="img-responsive portfolio-thumb" alt=" image d'un projet de création d'un site web pour photographes"></a>
+				<a href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img width="360" height="400" loading="lazy" src="img/2.webp" class="img-responsive portfolio-thumb" alt=" image d'un projet de création d'un site web pour photographes"></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
