Modif flex sur icones réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -211,10 +211,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center black">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
-				<div class="row row-no-gutters social">
+				<div class="row row-no-gutters flex-icons social">
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://twitter.com/?lang=fr" aria-label="Twitter"><span class="fa fa-twitter icon-md black"></span></a>
