Ajout class nav-text pour lien page-2

--- a/page2.html
+++ b/page2.html
@@ -37,7 +37,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a class="nav-text" href="index.html">Accueil</a>
 					</li>
 				</ul>
 			</div>
@@ -118,7 +118,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="row row-no-gutters social">
+				<div class="row row-no-gutters flex-icons social">
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://twitter.com/?lang=fr" aria-label="Twitter"><span class="fa fa-twitter icon-md black"></span></a>
