--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<!--<link rel="stylesheet" type="text/css" href="./css/et-line.css">-->
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
 
@@ -287,7 +286,9 @@
 	</div>
 	<!-- Principal conteneur END -->
 	<script src="./js/jquery-2.1.0.js" defer></script>
+	<!--<script src="./js/jquery-2.1.0.js" defer></script>-->
 	<script src="./js/bootstrap.js" defer></script>
+	<!--<script src="./js/bootstrap.min.js" defer></script>-->
 	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js" defer></script>
