--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 	<script src="./js/bootstrap.min.js" defer></script>
 	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script src="./js/gmaps.min.js" defer></script>
+	<!--<script src="./js/gmaps.min.js" defer></script>-->
 
 
 </body>
