--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img height="40" class="img-logo"
+						<a class="navbar-brand" href="index.html"><img width="230" height="40"
 								src="img/agence-la-panthere-monochrome.svg"
 								alt="La Panthère agence web design logo"></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
@@ -59,7 +59,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.webp" class="center-block image-resize-mode"
+						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100"
 							alt="logo de l'Agence La Panthère">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
