--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 
@@ -59,7 +59,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.webp" class="center-block image-resize-mode" width="100" height="100"
+						<img src="img/logo1.webp" class="center-block logo image-resize-mode" width="100" height="100"
 							alt="logo de l'Agence La Panthère">
 						<h1 class="text-center hero-bloc-text tc-white ">
 							Agence La Panthère
