--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
 	<title>La Panthère | Entreprise de web design à Lyon | Contactez-nous</title>
-	<meta name="description" content="Vous souhaitez discuter de la refonte de votre site? D’identité visuelle et de web design? Ou de SEO. Contactez l’agence La Panthère située en plein coeur Lyon.">
+	<meta name="description" content="Vous souhaitez discuter de la refonte de votre site ? D’identité visuelle et de SEO ? Contactez l’agence La Panthère située en plein coeur Lyon.">
     <meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
